# aplicacao-financeira-api

./: .env.dev  .env.test  .flake8  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.docker/: Dockerfile.debug  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/workflows/: analysis.yaml  main.yaml  pr_agent.yaml  release.yaml
script/: create_tables.py
src/app/: __init__.py  environment.py  server.py
src/app/application/: app_builder.py
src/app/application/common/: custom_router.py  dependencies.py
src/app/application/common/helpers/: cpf.py  phone.py
src/app/application/rest/: health.py  metric.py  person.py
src/app/domain/person/: exceptions.py  models.py  schemas.py
src/app/domain/person/usecases/: create_person.py
src/app/domain/users/: models.py
src/app/infra/config/: debug.py
src/app/infra/data/: base_model.py  base_repository.py  cache.py  database.py
src/app/infra/data/person/: repository.py
src/app/infra/logging/: correlation_id.py  loguru.py  request_logger.py
src/app/infra/monitoring/: prometheus.py  sentry.py
src/tests/unit/: conftest.py
