[tool.poetry]
name = "aplicacao-financeira-api"
version = "1.0.0"
description = ""
authors = ["Italo Fernandes <italo.fernandes@solfacil.com.br>"]
readme = "README.md"
repository = "https://github.com/"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.10"
fastapi = "^0.103.0"
loguru = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
py-automapper = "^1.2.3"
sqlalchemy = {version = "^2.0.20", extras = ["postgresql-asyncpg", "postgresql_psycopg2binary"]}
asyncpg = "^0.28.0"
sentry-sdk = "^2.8.0"
pydantic-settings = "^2.0.3"
pyjwt = "^2.8.0"
ddtrace = "^1.18.3"
httpx = "^0.24.1"
retry = "^0.9.2"
redis = "^5.0.1"
tenacity = "8.2.3"
requests = "^2.26.0"
chardet = "5.1.0"
pytest-asyncio = "^0.23.3"
opentelemetry-distro = "^0.44b0"
opentelemetry-exporter-otlp = "^1.23.0"
asgiref = "^3.7.2"
opentelemetry-instrumentation-logging = "^0.44b0"
opentelemetry-util-http = "^0.44b0"
opentelemetry-instrumentation-asgi = "^0.44b0"
opentelemetry-instrumentation-asyncpg = "^0.44b0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-instrumentation-sqlalchemy = "^0.44b0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-api = "^1.23.0"
prometheus-client = "^0.17.1"
opentelemetry-instrumentation-asyncio = "^0.44b0"
opentelemetry-test-utils = "^0.44b0"
opentelemetry-instrumentation-aws-lambda = "^0.44b0"
opentelemetry-propagator-aws-xray = "^1.0.1"
opentelemetry-instrumentation-dbapi = "^0.44b0"
opentelemetry-instrumentation-sqlite3 = "^0.44b0"
opentelemetry-instrumentation-urllib = "^0.44b0"
opentelemetry-instrumentation-wsgi = "^0.44b0"
opentelemetry-instrumentation-grpc = "^0.44b0"
opentelemetry-instrumentation-httpx = "^0.44b0"
opentelemetry-instrumentation-redis = "^0.44b0"
opentelemetry-instrumentation-requests = "^0.44b0"
opentelemetry-instrumentation-tortoiseorm = "^0.44b0"
opentelemetry-instrumentation-urllib3 = "^0.44b0"
launchdarkly-server-sdk = "^9.4.0"
pydantic = "^2.10.5"
aiokafka = "^0.12.0"

[tool.poetry.group.dev.dependencies]
isort = {version = "^5.12.0", extras = ["pyproject"]}
flake8 = "^6.1.0"
black = "^24.3.0"
debugpy = "1.6.7.post1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-faker = "^2.0.0"
flake8-isort = "^6.0.0"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-pytest-style = "^1.7.2"
flake8-comprehensions = "^3.14.0"
flake8-logging-format = "^0.9.0"
flake8-variables-names = "^0.0.6"
bandit = "^1.8.2"
pre-commit = "^3.3.3"
pycodestyle = "^2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-vv",
    "--strict-config",
    "--strict-markers",
    "-s",
    "-p no:warnings"
]
testpaths = ["src/tests"]

[tool.coverage.paths]
source = ["src/app"]

[tool.coverage.run]
branch = true
source = ["src/app"]

[tool.isort]
py_version = 311
line_length = 115
profile = "black"
src_paths = ["src"]

[tool.black]
line-length = 115
target-version = ['py311']
skip_string_normalization = true
